tests/integration/snapshots/integration__conformance__n_number_1.0e+.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
[1.0e+]
stdout ---

stderr ---
error: expected digit after exponent indicator, found `]`
 --> stdin:1:7
  |
1 | [1.0e+]
  |  -----^
  |  |  |
  |  |  exponent indicator found here
  |  number with exponent found here
