tests/integration/snapshots/integration__conformance__n_number_1_000.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[1 000.0]
stdout --- 
<empty>
stderr --- 
error: unexpected leading zero
 --> stdin:1:4
  |
1 | [1 000.0]
  |    -^^
  |    |
  |    first zero found here
  |
help: remove the leading zeros
  |
1 - [1 000.0]
1 + [1 0.0]
  |
