tests/integration/snapshots/integration__conformance__n_number_9.e+.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
[9.e+]
stdout --- 
<empty>
stderr --- 
error: expected fraction digit following dot, found `e`
 --> stdin:1:4
  |
1 | [9.e+]
  |  --^
  |  ||
  |  |decimal point found here
  |  number found here
